--- a/merging.Rmd
+++ b/merging.Rmd
@@ -51,7 +51,7 @@ annolist <- read_csv("/Users/loga8761/Desktop/anno_diffExpr.P0.01_C1.matrix.log2
 
 2. View the files to make sure the header for the contig names are identical. 
 
-```{r}
+```{r, eval=FALSE}
 head(annolist)
 head(genelist)
 ```
@@ -63,16 +63,24 @@ merged <- left_join(genelist, annolist, by = "ContigName")
 
 4. View the new merged file containing only the annotations for your gene list of interest. Take a look at the new file dimensions and contents to make sure the join worked
 
-```{r}
+```{r, eval=FALSE}
 head(merged)
 dim(merged)
 ```
 
-There are only 17 genes in our gene list but 55 in our merged file. If you inspect the merged list you also see that some of the Contig names are duplicated. We want to find the top hit with the lowest eval for each contig.
+There are only 23 genes in our gene list but 55 in our merged file. What is going on? Use head to inspect the list. Do you see any duplicate ContigNames in the merged list? We want to find the top hit with the lowest eval for each contig. We will do this iteratively on the nr evalue, then the uniprot evalue, then the longest contig. After this, we should have a table that has the same number of rows as our gene list of interest!
 
-```{r}
+```{r, eval=FALSE}
 unique <- merged %>%
-  group_by(ContigName)
+  group_by(ContigName) %>%
+  filter(topnrEvalue == min(topnrEvalue)) %>%
+  filter(evalue == min(evalue)) %>%
+  filter(ContigLength == max(ContigLength)) %>%
+ungroup(merged)
+
+head(unique)
+dim(unique)
 ```
+
 
 Now, we've essentally done the same thing in R as we did in bash, but in R we don't have to sort before we join. 
